hello react bootstrap

--- a/src/blog/another-post.mdx
+++ b/src/blog/another-post.mdx
@@ -11,3 +11,6 @@ list of numbers:
 * 4
 * 5
 * 6
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+Fugit voluptatem architecto vel facilis, quisquam praesentium, itaque laboriosam incidunt aliquam aspernatur ut dolor ad, neque illum fuga nulla perferendis. Facere, dolore.
