--- a/src/blog/first-post.mdx
+++ b/src/blog/first-post.mdx
@@ -11,3 +11,5 @@ list of numbers:
 * 1
 * 2
 * 3
+
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, expedita, nesciunt adipisci quia reprehenderit fugiat atque harum nisi ratione possimus et, non reiciendis facere. Velit necessitatibus ut repellat quae. Tenetur.
